# framalytics

./: .gitignore  .readthedocs.yaml  Framtest.ipynb  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/linters/: .flake8  .mypy.ini
.github/workflows/: lint.yaml  python-package.yml  unit-tests.yaml
docs/: api.rst  conf.py  example.rst  index.rst  installation.rst
framalytics/: FRAM Visualizer.py  FRAM model-Stroke care system.xfmv  FRAM_Visualizer.py  __init__.py  fram.py  read_xfmv.py  visualize.py  xfmv_parser.py
framalytics/tests/: test_fram.py  test_xfmv_parser.py
framalytics/tests/resources/: colored_fram.xfmv  simple_fram.xfmv
tests/: read_xfmv.py  test_fram.py  test_visualize.py  test_xfmv_parser.py
